# sqlite

./: Cargo.toml  README.md  test.db
.github/workflows/: test.yml
lib-parse/: Cargo.toml  README.md
lib-parse/src/: buffer.rs  lib.rs  util.rs
lib-parse/src/common/: delimiter.rs  mod.rs  token.rs
lib-parse/src/parse/: lookahead.rs  mod.rs  punctuated.rs  token.rs
src/: main.rs  pager.rs  record.rs  varint.rs
src/btree/: mod.rs  payload.rs
src/btree/page/: disk.rs  mod.rs
src/btree/page/page_kind/: interior.rs  leaf.rs  mod.rs
src/btree/page/page_type/: index.rs  mod.rs  table.rs
src/command/: base.rs  mod.rs  parse.rs  token.rs
src/ctx/: mod.rs  pager.rs
src/disk/: header.rs  mod.rs  util.rs
src/header/: mod.rs  page_size.rs  raw.rs
src/memory/: chain.rs  mod.rs  page.rs  pager.rs  process.rs
src/page/: cell.rs  mod.rs
src/page/page_flag/: mod.rs  page_family.rs  page_type.rs
src/page/storage/: mod.rs  readable.rs
src/pager/: mod.rs
src/structures/: header.rs  mod.rs  util.rs  var_int.rs
src/structures/btree/: mod.rs  page.rs
src/structures/btree/cell/: index.rs  mod.rs  payload.rs  table.rs
src/structures/header/: file_format_version.rs  header_string.rs  mod.rs  page_size.rs  schema_format.rs  sqlite_version_number.rs  text_encoding.rs
src/structures/page/: cell.rs  mod.rs
src/structures/page/page_flag/: mod.rs  page_family.rs  page_type.rs
src/v2/: mod.rs  pager.rs
src/v2/btree/: disk.rs  mod.rs  payload.rs
src/v2/disk/: mod.rs  page.rs  util.rs
