[package]
name = "sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["debug", "deref", "try_from"] }
static_assertions = "1.1.0"
thiserror = "2.0.12"
zerocopy = { version = "0.8.21", features = ["std", "derive"] }

[dev-dependencies]
rstest = "0.25.0"
